--- a/src/main/resources/spring/data-access.properties
+++ b/src/main/resources/spring/data-access.properties
@@ -45,9 +45,9 @@
 # Postgres Settings
  
 jdbc.driverClassName=org.postgresql.Driver
-jdbc.url=jdbc:postgresql://localhost:5432/petclinic
-jdbc.username=postgres
-jdbc.password=postgres
+jdbc.url=jdbc:postgresql://$SERVICE_IP:5432/petclinic
+jdbc.username=$USERNAME
+jdbc.password=$PASSWORD
  
 # Properties that control the population of schema and data for a new data source
 jdbc.initLocation=classpath:db/postgresql/initDB.sql
