--- a/src/main/resources/spring/data-access.properties
+++ b/src/main/resources/spring/data-access.properties
@@ -45,7 +45,7 @@
 # Postgres Settings
  
 jdbc.driverClassName=org.postgresql.Driver
-jdbc.url=jdbc:postgresql://$SERVICE_IP:5432/petclinic
+jdbc.url=jdbc:postgresql://$HOST
 jdbc.username=$USERNAME
 jdbc.password=$PASSWORD
  
