app+service bind - conf update

--- a/src/main/resources/spring/data-access.properties
+++ b/src/main/resources/spring/data-access.properties
@@ -45,9 +45,9 @@
 # Postgres Settings
  
 jdbc.driverClassName=org.postgresql.Driver
-jdbc.url=jdbc:postgresql://$HOST
-jdbc.username=$USERNAME
-jdbc.password=$PASSWORD
+jdbc.url=jdbc:postgresql://$HOST:$PORT
+jdbc.username=$DBNAME
+jdbc.password=$DBPASSWORD
  
 # Properties that control the population of schema and data for a new data source
 jdbc.initLocation=classpath:db/postgresql/initDB.sql
