--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 
 		<!-- Test -->
 		<assertj.version>2.1.0</assertj.version>
-  
+
 		<!-- Dates -->
 		<jodatime-hibernate.version>1.3</jodatime-hibernate.version>
 		<jodatime-jsptags.version>1.1.1</jodatime-jsptags.version>
@@ -39,8 +39,9 @@
 		<dandelion.version>0.10.1</dandelion.version>
 
 		<cobertura.version>2.7</cobertura.version>
-
+   <skipTests>true</skipTests>
 	</properties>
+
 
 	<dependencyManagement>
 		<!-- Import the maven Spring IO Platform Bill Of Materials (BOM) -->
@@ -93,6 +94,16 @@
             <artifactId>json-path</artifactId>
             <scope>test</scope>
         </dependency>
+
+				<dependency>
+		<groupId>com.googlecode.json-simple</groupId>
+		<artifactId>json-simple</artifactId>
+		<version>1.1.1</version>
+	</dependency>
+
+
+
+
 		<!-- SPRING, SPRING, SPRINGITY SPRING -->
 		<dependency>
 			<groupId>org.springframework.data</groupId>
@@ -151,9 +162,9 @@
 			<artifactId>aspectjweaver</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-		
-		<!-- Database connection pool 
-		See here for more details on commons-dbcp versus tomcat-jdbc: 
+
+		<!-- Database connection pool
+		See here for more details on commons-dbcp versus tomcat-jdbc:
     	http://blog.ippon.fr/2013/03/13/improving-the-performance-of-the-spring-petclinic-sample-application-part-3-of-5/
     -->
 		<dependency>
@@ -172,7 +183,7 @@
 			<artifactId>logback-classic</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-		
+
 		<!-- Date and Time -->
 		<dependency>
 			<groupId>joda-time</groupId>
@@ -190,11 +201,19 @@
 		</dependency>
 
 		<!-- Databases - Uses HSQL by default -->
-		<dependency>
+<!--		<dependency>
 			<groupId>org.hsqldb</groupId>
 			<artifactId>hsqldb</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+-->
+
+<!-- -->
+<dependency>
+	<groupId>org.postgresql</groupId>
+	<artifactId>postgresql</artifactId>
+	<version>9.4-1201-jdbc41</version>
+</dependency>
 
 		<!-- For MySql only -->
 		<!-- <dependency> <groupId>mysql</groupId> <artifactId>mysql-connector-java</artifactId> </dependency> -->
@@ -207,7 +226,7 @@
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-validator</artifactId>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-ehcache</artifactId>
@@ -238,7 +257,7 @@
 			<artifactId>jquery</artifactId>
 			<version>${webjars-jquery.version}</version>
 		</dependency>
-		
+
 		<!-- Test Artifacts -->
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -381,7 +400,7 @@
 	</build>
 		<reporting>
 		<plugins>
-		 
+
 			<!--  integrate maven-cobertura-plugin to project site  -->
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
