--- a/src/main/resources/spring/data-access.properties
+++ b/src/main/resources/spring/data-access.properties
@@ -46,7 +46,7 @@
 jdbc.driverClassName=org.postgresql.Driver
 jdbc.url=jdbc:postgresql://${HOST}:${PORT}/${DBNAME}
 jdbc.username=${DBUSER}
-jdbc.password=${DBPASSWORD}
+#jdbc.password=${DBPASSWORD}
 
 # Properties that control the population of schema and data for a new data source
 jdbc.initLocation=classpath:db/postgres/initDB.sql
